--- a/common/css/base.css
+++ b/common/css/base.css
@@ -142,7 +142,7 @@ a:hover	{
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(227, 175, 203, 1);
+  background: #FFF;
   z-index: 9999;
 }
 
@@ -161,7 +161,7 @@ a:hover	{
 .loading-text span {
   display: inline-block;
   margin: 0 5px;
-  color: #fff;
+  color: rgba(227, 175, 203, 1);
   font-size: 3rem;
   font-family: 'Baloo Da 2', cursive;
 }
