--- a/common/css/base.css
+++ b/common/css/base.css
@@ -100,7 +100,7 @@ body {
 	font-size	: 16px;
 	line-height	: 1.5;
 	text-align	: center;
-	color		: #444;
+	color		: #5b5b5b;
 	-webkit-text-size-adjust	: 100%;
 	font-smoothing	: auto;
 }
