--- a/css/top.css
+++ b/css/top.css
@@ -16,16 +16,16 @@
     height: 208px;
     background: rgba(227, 175, 203, 0.7);
     background-color: rgba(227, 175, 203, 0.7);
-    top: 100px;
-    left: 60px;
+    top: 6%;
+    left: 6%;
 }
 .deco_bubble02 {
     width: 120px;
     height: 120px;
     background: rgba(182, 203, 226, 0.7);
     background-color: rgba(182, 203, 226, 0.7);
-    top: 250px;
-    right: 50px;
+    top: 20%;
+    right: 5%;
 }
 
 .deco_bubble03 {
@@ -33,8 +33,8 @@
     height: 120px;
     background: rgba(182, 203, 226, 0.7);
     background-color: rgba(182, 203, 226, 0.7);
-    top: 290px;
-    left: 310px;
+    top: 30%;
+    left: 20%;
 }
 
 /*TOP*/
@@ -45,7 +45,7 @@
   border: 10px solid rgba(227, 175, 203, 0.7);
   border-radius:5px; 
   box-sizing: border-box;
-  margin: 45px;
+  margin: 2.5%;
 }
 
 #area01 .name_area{
@@ -58,8 +58,42 @@
   #area01 .name_area h1{
     font-size: 7rem;
     letter-spacing: 10px;
+    background: #e3afcb;
+    background: -moz-linear-gradient(left, #ffffff 0%, #e3afcb 100%);
+    background: -webkit-gradient(linear, left center, right center, from(#ffffff), to(#e3afcb));
+    background: -webkit-linear-gradient(left, #ffffff 0%, #e3afcb 100%);
+    background: -o-linear-gradient(left, #ffffff 0%, #e3afcb 100%);
+    background: linear-gradient(to right, #ffffff 0%, #e3afcb 100%);
+    background-size: 400% 400%;
+    animation: title 10s ease infinite;
+    -webkit-background-clip: text;
+    -webkit-text-stroke: 0.5px #5b5b5b;
+    color: transparent;
+    transition: 0.4s;
+    cursor: default;
+    }
+
+   #area01 .name_area h1:hover {
+     background: #FFF;
+    }
+
+@keyframes title{
+    0%{
+      background-position:0% 50%;
+    }
+    50%{
+      background-position:80% 0%;
+    }
+    100%{
+      background-position:0% 50%;
+    }
+}
+
+@media all and (-ms-high-contrast: none){
+  #area01 .name_area h1 {
+    background: transparent;
     color: #FFF;
-    text-shadow    : 
+     text-shadow    : 
        1px  1px 0px #5b5b5b,
       -1px  1px 0px #5b5b5b,
        1px -1px 0px #5b5b5b,
@@ -67,10 +101,21 @@
        1px  0px 0px #5b5b5b,
        0px  1px 0px #5b5b5b,
       -1px  0px 0px #5b5b5b,
-       0px -1px 0px #5b5b5b;  
-    }
+       0px -1px 0px #5b5b5b; 
+  }
+  #area01 .name_area h1:hover {
+    color: rgba(227, 175, 203, 0.7);
+  }
+}
   #area01 .name_area p{
     font-size: 2.4rem;
     color: #5b5b5b;
   }
+
+@media (max-width: 768px) {
+#area01{
+  height: calc(100vh - 20px);
+  border: 5px solid rgba(227, 175, 203, 0.7);
+}
+}
 
